removed Angular keywords that were previously used but are no longer required

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
 						</thead>
 						<!-- Table Body -->
 						<tbody ng-controller='ItemsController as items'>
-							<tr ng-repeat='item in items.itemList track by $index'>
+							<tr ng-repeat='item in items.itemList'>
 								<td class="name">{{ item.name }}</td>
 								<td class="color">{{ item.color }}</td>
 								<td class="quantity">{{ item.quantity }}</td>
